Added functionality in main sudoku game

--- a/difficulty.html
+++ b/difficulty.html
@@ -8,7 +8,7 @@
        <link rel="stylesheet" href="assets/fonts/fonts.css">
     </head>
     <body class="lilita">
-        <div class="max-w-2xl h-screen mx-auto bg-[url('assets/images/home-bg.jpg')] bg-cover">
+        <div class="max-w-lg h-screen mx-auto bg-[url('assets/images/home-bg.jpg')] bg-cover">
             <div class="flex justify-between p-4">
                 <a class="bg-[url('assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="4" stroke=" currentColor" class="size-9 drop-shadow-xl/20">
@@ -21,10 +21,10 @@
                     </svg>                      
                 </a>
             </div>
-            <div class="my-32">
-                <h4 class="text-5xl text-center text-blue-900">Choose Your Difficulty</h4>
+            <div class="my-10">
+                <h4 class="text-4xl text-center text-blue-900">Choose Your Difficulty</h4>
                 <div class="flex flex-col space-y-4 mt-14">
-                    <a href="levels/4x4.html" class="relative w-64 h-24 mx-auto">
+                    <a href="levels/9x9.html" class="relative w-64 h-24 mx-auto">
                         <img src="assets/images/button-yellow.png" class="w-full h-full" alt="Button Image" />
                         <div class="absolute inset-0 flex items-center justify-center">
                             <div class="text-center">
