--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Warriors Path</title>
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-       <link rel="stylesheet" href="assets/fonts/fonts.css">
+        <link rel="stylesheet" href="assets/fonts/fonts.css">
     </head>
     <body class="lilita">
-        <div class="max-w-2xl h-screen mx-auto bg-[url('assets/images/home-bg.jpg')] bg-cover">
+        <div class="max-w-lg h-dvh mx-auto bg-[url('assets/images/home-bg.jpg')] bg-cover">
             <div class="flex justify-end p-4">
                 <a class="bg-[url('assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-9 drop-shadow-xl/20">
@@ -16,7 +16,7 @@
                     </svg>                      
                 </a>
             </div>
-            <img src="https://placehold.co/500x500" class="w-64 h-64 mx-auto my-24" alt="">
+            <img src="https://placehold.co/500x500" class="w-64 h-64 mx-auto lg:my-10 md:my-24" alt="">
             <div class="flex flex-col space-y-4 mt-10">
                 <a href="level.html" class="relative w-64 h-24 mx-auto">
                     <img src="assets/images/button-blue.png" class="w-full h-full" alt="Button Image" />
