--- a/select-size.html
+++ b/select-size.html
@@ -8,7 +8,7 @@
        <link rel="stylesheet" href="assets/fonts/fonts.css">
     </head>
     <body class="lilita">
-        <div class="max-w-2xl h-screen mx-auto bg-[url('assets/images/home-bg.jpg')] bg-cover">
+        <div class="max-w-lg h-screen mx-auto bg-[url('assets/images/home-bg.jpg')] bg-cover">
             <div class="flex justify-between p-4">
                 <a class="bg-[url('assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="4" stroke=" currentColor" class="size-9 drop-shadow-xl/20">
