4/26/2025 UPDATE AS OF 5:31PM

--- a/difficulty.html
+++ b/difficulty.html
@@ -25,7 +25,7 @@
                 <h4 class="text-4xl text-center text-blue-900">Choose Your Difficulty</h4>
                 <div class="flex flex-col space-y-4 mt-14">
                     <a href="levels/9x9.html" class="relative w-64 h-24 mx-auto">
-                        <img src="assets/images/button-yellow.png" class="w-full h-full" alt="Button Image" />
+                        <img src="./assets/images/btn-yellow.png" class="w-full h-full" alt="Button Image" />
                         <div class="absolute inset-0 flex items-center justify-center">
                             <div class="text-center">
                                 <h4 class="text-shadow-md text-shadow-amber-900 text-white font-bold text-4xl m-0">Scout</h4>
@@ -34,7 +34,7 @@
                         </div>
                     </a>
                     <a href="#" class="relative w-64 h-24 mx-auto">
-                        <img src="assets/images/button-yellow.png" class="w-full h-full" alt="Button Image" />
+                        <img src="./assets/images/btn-yellow.png" class="w-full h-full" alt="Button Image" />
                         <div class="absolute inset-0 flex items-center justify-center">
                             <div class="text-center">
                                 <h4 class="text-shadow-md text-shadow-amber-900 text-white font-bold text-4xl m-0">Warrior</h4>
@@ -43,7 +43,7 @@
                         </div>
                     </a>
                     <a href="#" class="relative w-64 h-24 mx-auto">
-                        <img src="assets/images/button-yellow.png" class="w-full h-full" alt="Button Image" />
+                        <img src="./assets/images/btn-yellow.png" class="w-full h-full" alt="Button Image" />
                         <div class="absolute inset-0 flex items-center justify-center">
                             <div class="text-center">
                                 <h4 class="text-shadow-md text-shadow-amber-900 text-white font-bold text-4xl m-0">Champion</h4>
