--- a/select-size.html
+++ b/select-size.html
@@ -25,19 +25,19 @@
                 <h4 class="text-5xl text-center text-blue-900">Choose Your Size</h4>
                 <div class="flex flex-col space-y-4 mt-14">
                     <a href="difficulty.html" class="relative w-64 h-24 mx-auto">
-                        <img src="assets/images/button-yellow.png" class="w-full h-full" alt="Button Image" />
+                        <img src="./assets/images/btn-yellow.png" class="w-full h-full" alt="Button Image" />
                         <div class="absolute inset-0 flex items-center justify-center">
                             <h4 class="text-shadow-lg text-shadow-amber-900 text-white font-bold text-4xl pb-3">4x4</h4>
                         </div>
                     </a>
                     <a href="difficulty.html" class="relative w-64 h-24 mx-auto">
-                        <img src="assets/images/button-yellow.png" class="w-full h-full" alt="Button Image" />
+                        <img src="./assets/images/btn-yellow.png" class="w-full h-full" alt="Button Image" />
                         <div class="absolute inset-0 flex items-center justify-center">
                             <h4 class="text-shadow-lg text-shadow-amber-900 text-white font-bold text-4xl pb-3">6x6</h4>
                         </div>
                     </a>
                     <a href="difficulty.html" class="relative w-64 h-24 mx-auto">
-                        <img src="assets/images/button-yellow.png" class="w-full h-full" alt="Button Image" />
+                        <img src="./assets/images/btn-yellow.png" class="w-full h-full" alt="Button Image" />
                         <div class="absolute inset-0 flex items-center justify-center">
                             <h4 class="text-shadow-lg text-shadow-amber-900 text-white font-bold text-4xl pb-3">9x9</h4>
                         </div>
