--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                     </svg>                      
                 </a>
             </div>
-            <img src="https://placehold.co/500x500" class="w-64 h-64 mx-auto lg:my-10 md:my-24" alt="">
+            <img src="./assets/images/logo.png" class="w-64 h-64 mx-auto lg:my-10 md:my-24" alt="">
             <div class="flex flex-col space-y-4 mt-10">
                 <a href="level.html" class="relative w-64 h-24 mx-auto">
-                    <img src="assets/images/button-blue.png" class="w-full h-full" alt="Button Image" />
+                    <img src="./assets/images/btn-blue.png" class="w-full h-full" alt="Button Image" />
                     <div class="absolute inset-0 flex items-center justify-center">
                         <h4 class="text-shadow-lg text-shadow-blue-900 text-white font-bold text-4xl pb-3">Story Mode</h4>
                     </div>
                 </a>
                 <a href="select-size.html" class="relative w-64 h-24 mx-auto">
-                    <img src="assets/images/button-yellow.png" class="w-full h-full" alt="Button Image" />
+                    <img src="./assets/images/btn-yellow.png" class="w-full h-full" alt="Button Image" />
                     <div class="absolute inset-0 flex items-center justify-center">
                         <h4 class="text-shadow-lg text-shadow-amber-900 text-white font-bold text-4xl pb-3">Casual Mode</h4>
                     </div>
