Added functionality in sudoku game, fixed spacing and sizing

--- a/level.html
+++ b/level.html
@@ -8,18 +8,93 @@
        <link rel="stylesheet" href="assets/fonts/fonts.css">
     </head>
     <body class="lilita">
-        <div class="max-w-lg h-screen mx-auto bg-[url('assets/images/level-path.png')] bg-cover bg-bottom">
+        <div class="max-w-lg h-screen mx-auto bg-[url('assets/images/level-path.png')] bg-cover bg-bottom static border">
             <div class="flex justify-between p-4">
                 <a class="bg-[url('assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="index.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="4" stroke=" currentColor" class="size-9 drop-shadow-xl/20">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="4" stroke=" currentColor" class="size-7 drop-shadow-xl/20">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
                     </svg>                                            
                 </a>
                 <a class="bg-[url('assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-9 drop-shadow-xl/20">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 drop-shadow-xl/20">
                         <path fill-rule="evenodd" d="M11.078 2.25c-.917 0-1.699.663-1.85 1.567L9.05 4.889c-.02.12-.115.26-.297.348a7.493 7.493 0 0 0-.986.57c-.166.115-.334.126-.45.083L6.3 5.508a1.875 1.875 0 0 0-2.282.819l-.922 1.597a1.875 1.875 0 0 0 .432 2.385l.84.692c.095.078.17.229.154.43a7.598 7.598 0 0 0 0 1.139c.015.2-.059.352-.153.43l-.841.692a1.875 1.875 0 0 0-.432 2.385l.922 1.597a1.875 1.875 0 0 0 2.282.818l1.019-.382c.115-.043.283-.031.45.082.312.214.641.405.985.57.182.088.277.228.297.35l.178 1.071c.151.904.933 1.567 1.85 1.567h1.844c.916 0 1.699-.663 1.85-1.567l.178-1.072c.02-.12.114-.26.297-.349.344-.165.673-.356.985-.57.167-.114.335-.125.45-.082l1.02.382a1.875 1.875 0 0 0 2.28-.819l.923-1.597a1.875 1.875 0 0 0-.432-2.385l-.84-.692c-.095-.078-.17-.229-.154-.43a7.614 7.614 0 0 0 0-1.139c-.016-.2.059-.352.153-.43l.84-.692c.708-.582.891-1.59.433-2.385l-.922-1.597a1.875 1.875 0 0 0-2.282-.818l-1.02.382c-.114.043-.282.031-.449-.083a7.49 7.49 0 0 0-.985-.57c-.183-.087-.277-.227-.297-.348l-.179-1.072a1.875 1.875 0 0 0-1.85-1.567h-1.843ZM12 15.75a3.75 3.75 0 1 0 0-7.5 3.75 3.75 0 0 0 0 7.5Z" clip-rule="evenodd" />
                     </svg>                      
                 </a>
+            </div>
+            <div class="max-w-lg mx-auto p-4 absolute bottom-10 right-0 left-0">
+                <div class="w-full flex justify-center items-center mb-4 ml-24">
+                    <div class="w-24 drop-shadow-xl drop-shadow-slate-900">
+                        <div class="flex items-center space-x-1 justify-center">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                            <img src="assets/images/gray-star.png" class="w-7 h-7">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                        </div>
+                        <div class="bg-[url('assets/images/shield-level.png')] bg-cover bg-center flex items-center justify-center w-14 h-14 mx-auto">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.4" stroke="currentColor" class="size-6 text-zinc-700">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
+                            </svg>                              
+                        </div>
+                        <img src="" class="mix-blend-multiply w-14 mx-auto">
+                    </div>
+                </div>
+                <div class="w-full flex justify-center items-center md:mb-18 mb-8 ml-10">
+                    <div class="w-24 drop-shadow-xl drop-shadow-slate-900">
+                        <div class="flex items-center space-x-1 justify-center">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                            <img src="assets/images/gray-star.png" class="w-7 h-7">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                        </div>
+                        <div class="bg-[url('assets/images/shield-level.png')] bg-cover bg-center flex items-center justify-center w-14 h-14 mx-auto">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.4" stroke="currentColor" class="size-6 text-zinc-700">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
+                            </svg>                              
+                        </div>
+                        <img src="" class="mix-blend-multiply w-14 mx-auto">
+                    </div>
+                </div>
+                <div class="w-full flex items-center mb-10 ml-2">
+                    <div class="w-24 drop-shadow-xl drop-shadow-slate-900">
+                        <div class="flex items-center space-x-1 justify-center">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                            <img src="assets/images/gray-star.png" class="w-7 h-7">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                        </div>
+                        <div class="bg-[url('assets/images/shield-level.png')] bg-cover bg-center flex items-center justify-center w-14 h-14 mx-auto">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.4" stroke="currentColor" class="size-6 text-zinc-700">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
+                            </svg>                              
+                        </div>
+                        <img src="" class="mix-blend-multiply w-14 mx-auto">
+                    </div>
+                </div>
+                <div class="w-full flex items-center mb-10 ml-20">
+                    <div class="w-24 drop-shadow-xl drop-shadow-slate-900">
+                        <div class="flex items-center space-x-1 justify-center">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                            <img src="assets/images/gray-star.png" class="w-7 h-7">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                        </div>
+                        <div class="bg-[url('assets/images/shield-level.png')] bg-cover bg-center flex items-center justify-center w-14 h-14 mx-auto">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.4" stroke="currentColor" class="size-6 text-zinc-700">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 1 0-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 0 0 2.25-2.25v-6.75a2.25 2.25 0 0 0-2.25-2.25H6.75a2.25 2.25 0 0 0-2.25 2.25v6.75a2.25 2.25 0 0 0 2.25 2.25Z" />
+                            </svg>                              
+                        </div>
+                        <img src="" class="mix-blend-multiply w-14 mx-auto">
+                    </div>
+                </div>
+                <div class="w-full flex justify-center items-center">
+                    <a href="levels/stages/level-1.html" class="w-24 drop-shadow-xl drop-shadow-slate-900">
+                        <div class="flex items-center space-x-1 justify-center">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                            <img src="assets/images/gray-star.png" class="w-7 h-7">
+                            <img src="assets/images/gray-star.png" class="w-5 h-5 mt-4">
+                        </div>
+                        <div class="bg-[url('assets/images/shield-level.png')] bg-cover bg-center flex items-center justify-center w-14 h-14 mx-auto">
+                            <p class="text-2xl text-amber-900">1</p>
+                        </div>
+                        <img src="" class="mix-blend-multiply w-14 mx-auto">
+                    </a>
+                </div>
             </div>
         </div>
     </body>
