--- a/levels/stages/level-1.html
+++ b/levels/stages/level-1.html
@@ -5,7 +5,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Warriors Path</title>
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-        <link rel="stylesheet" href="../assets/fonts/fonts.css">
+        <link rel="stylesheet" href="../../assets/fonts/fonts.css">
         <style>
             /* Hide arrows for input[type=number] */
             input::-webkit-outer-spin-button,
@@ -19,28 +19,28 @@
         </style>
     </head>
     <body class="lilita">
-        <div class="max-w-lg h-screen mx-auto bg-[url('../assets/images/home-bg.jpg')] bg-cover">
+        <div class="max-w-lg h-screen mx-auto bg-[url('../../assets/images/home-bg.jpg')] bg-cover">
             <div class="flex justify-between p-4">
                 <div class="flex space-x-4 items-center">
-                    <a class="bg-[url('../assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="../index.html">
+                    <a class="bg-[url('../../assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="../../level.html">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="4" stroke=" currentColor" class="size-7 drop-shadow-xl/20">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
                         </svg>                                            
                     </a>
-                    <a class="bg-[url('../assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="index.html">
+                    <a class="bg-[url('../../assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="index.html">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="4" stroke="currentColor" class="size-7 drop-shadow-xl/20">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 5.25v13.5m-7.5-13.5v13.5" />
                         </svg>                                                                              
                     </a>
                 </div>
                 <div class="flex space-x-4 items-center">
-                    <a class="bg-[url('../assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="">
+                    <a class="bg-[url('../../assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-7 drop-shadow-xl/20">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
                             <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                         </svg>                                                
                     </a>
-                    <a class="bg-[url('../assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="">
+                    <a class="bg-[url('../../assets/images/circle-wood.png')] bg-cover p-4 text-white flex items-center justify-center cursor-pointer" href="">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 drop-shadow-xl/20">
                             <path fill-rule="evenodd" d="M11.078 2.25c-.917 0-1.699.663-1.85 1.567L9.05 4.889c-.02.12-.115.26-.297.348a7.493 7.493 0 0 0-.986.57c-.166.115-.334.126-.45.083L6.3 5.508a1.875 1.875 0 0 0-4.282.819l-.922 1.597a1.875 1.875 0 0 0 .432 2.385l.84.692c.095.078.17.229.154.43a7.598 7.598 0 0 0 0 1.139c.015.2-.059.352-.153.43l-.841.692a1.875 1.875 0 0 0-.432 2.385l.922 1.597a1.875 1.875 0 0 0 2.282.818l1.019-.382c.115-.043.283-.031.45.082.312.214.641.405.985.57.182.088.277.228.297.35l.178 1.071c.151.904.933 1.567 1.85 1.567h1.844c.916 0 1.699-.663 1.85-1.567l.178-1.072c.02-.12.114-.26.297-.349.344-.165.673-.356.985-.57.167-.114.335-.125.45-.082l1.02.382a1.875 1.875 0 0 0 2.28-.819l.923-1.597a1.875 1.875 0 0 0-.432-4.385l-.84-.692c-.095-.078-.17-.229-.154-.43a7.614 7.614 0 0 0 0-1.139c-.016-.2.059-.352.153-.43l.84-.692c.708-.582.891-1.59.433-4.385l-.922-1.597a1.875 1.875 0 0 0-4.282-.818l-1.02.382c-.114.043-.282.031-.449-.083a7.49 7.49 0 0 0-.985-.57c-.183-.087-.277-.227-.297-.348l-.179-1.072a1.875 1.875 0 0 0-1.85-1.567h-1.843ZM12 15.75a3.75 3.75 0 1 0 0-7.5 3.75 3.75 0 0 0 0 7.5Z" clip-rule="evenodd" />
                         </svg>                      
@@ -51,9 +51,9 @@
                 <h2 class="text-5xl uppercase text-blue-900">Level 1</h2>
                 <div class="my-4 flex items-center justify-between max-w-92 px-2 mx-auto">
                     <div class="flex items-center space-x-2">
-                        <img src="../assets/images/life.png" class="w-5 h-5">
-                        <img src="../assets/images/life.png" class="w-5 h-5">
-                        <img src="../assets/images/life.png" class="w-5 h-5">
+                        <img src="../../assets/images/life.png" class="w-5 h-5">
+                        <img src="../../assets/images/life.png" class="w-5 h-5">
+                        <img src="../../assets/images/life.png" class="w-5 h-5">
                     </div>
                     <h6 class="text-blue-900 text-xl">0:00</h6>
                 </div>
@@ -156,6 +156,20 @@
                     <input type="number" maxlength="1" name="" id="input-9-8" class="text-center input-field w-10 h-10 focus:outline-none border border-blue-900 bg-white border-b-4">
                     <input type="number" maxlength="1" name="" id="input-9-9" class="text-center input-field w-10 h-10 focus:outline-none border border-blue-900 bg-white border-b-4 border-r-4 rounded-br-md">
                 </div>
+                <div class="mt-4 flex justify-center text-blue-950 space-x-4 max-w-96 mx-auto">
+                    <div class="text-center bg-white p-2 rounded-md drop-shadow-xl drop-shadow-sky-950 cursor-pointer hover:bg-gray-50 ease duration-200">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 mx-auto">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
+                        </svg>                          
+                        <p>Undo</p>
+                    </div>   
+                    <div class="text-center bg-white p-2 rounded-md drop-shadow-xl drop-shadow-sky-950 cursor-pointer hover:bg-gray-50 ease duration-200">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="size-6 mx-auto">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 18v-5.25m0 0a6.01 6.01 0 0 0 1.5-.189m-1.5.189a6.01 6.01 0 0 1-1.5-.189m3.75 7.478a12.06 12.06 0 0 1-4.5 0m3.75 2.383a14.406 14.406 0 0 1-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 1 0-7.517 0c.85.493 1.509 1.333 1.509 2.316V18" />
+                        </svg>
+                        <p>Hint</p>
+                    </div>     
+                </div>
                 <div class="mt-4 flex flex-wrap justify-center text-black space-y-2 space-x-2 max-w-96 mx-auto">
                     <button x-data="1" class="input-btn cursor-pointer hover:bg-gray-50 ease duration-200 bg-white px-2 py-2 rounded text-2xl drop-shadow-xl drop-shadow-sky-950">1</button>
                     <button x-data="2" class="input-btn cursor-pointer hover:bg-gray-50 ease duration-200 bg-white px-2 py-2 rounded text-2xl drop-shadow-xl drop-shadow-sky-950">2</button>
@@ -175,7 +189,7 @@
                 </div>
             </div>
         </div>
-        <script src="../assets/js/sudoku.js"></script>
+        <script src="../../assets/js/sudoku.js"></script>
         <script>
             starting_board = sudoku.generate("easy")
             board = sudoku.board_string_to_grid(starting_board)
@@ -254,8 +268,6 @@
                     if (get_mistake_cell(board).mistakes == 0 && get_mistake_cell(board).blank == 0) {
                         alert("Congratulations! You solved the puzzle!");
                     }
-
-
                 });
             });
 
